app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-demo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: argocd-demo
  template:
    metadata:
      labels:
        app: argocd-demo
    spec:
      containers:
      - image: index.docker.io/v1/vanlahuynhduc/itmo-ops-test
        name: itmo-ops-test
        ports:
        - containerPort: 80
