app/sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-demo-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: argocd-demo
