app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-demo-ig
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hihi.itmosvn.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-demo
                port:
                  number: 8080
